# ordpath

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.MIT  README.md
.github/workflows/: build.yml
benches/: ordpath.rs
src/: buf.rs  enc.rs  error.rs  lib.rs  raw.rs  reader.rs  writer.rs
