[package]
name = "ordpath"
version = "0.2.0"
authors = ["Yoh Deadfall <yoh.deadfall@hotmail.com>"]
edition = "2021"
description = "Implementation of ORDPATH encoding"
homepage = "https://github.com/yohdeadfall/ordpath/"
repository = "https://github.com/yohdeadfall/ordpath/"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["encoding", "ordering", "hierarchy"]
categories = ["encoding"]
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]

[dependencies]
serde = { version = "1", optional = true, default-features = false }

[dev_dependencies]
bincode = "1.3.3"
criterion = "0.5.1"

[[bench]]
name = "ordpath"
harness = false
