[package]
name = "ordpath"
version = "0.3.0"
authors = ["Yoh Deadfall <yoh.deadfall@hotmail.com>"]
edition = "2021"
homepage = "https://github.com/yohdeadfall/ordpath/"
repository = "https://github.com/yohdeadfall/ordpath/"
description = "Implementation of the ORDPATH hierarchical labeling scheme"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["encoding", "ordering", "hierarchy", "labeling"]
categories = ["encoding"]
exclude = [".github/"]

[dependencies]
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.5.1"

[[bench]]
name = "ordpath"
harness = false
